# motor_pair_ctrl

./: .gitignore  CMakeLists.txt
components/differential_drive_ctrl/: CMakeLists.txt  diff_drive_ctrl.c  differential_drive_ctrl.c
components/fake_data_center/: CMakeLists.txt  fake_data_center.cpp
components/kalman_filter/: CMakeLists.txt  kalman_filter.c
components/motor_pair_ctrl/: CMakeLists.txt  motor_pair_ctrl.c
components/navigation_control/: CMakeLists.txt  navigation_control.cpp  waypoint_controller.cpp
components/navigation_unit/: CMakeLists.txt  navigation_unit.c
components/odometry_unit/: CMakeLists.txt  odometry_unit.c
components/queue/: CMakeLists.txt  queue.c
components/seed_planter_control/: CMakeLists.txt  seed_planter_control.c
components/state_machine/: CMakeLists.txt  state_machine.cpp
components/test_units/: CMakeLists.txt  test_data_center.cpp  test_diff_drive.c  test_seed_planter.c  test_traction_control.c  test_waypoint_follower.c  test_waypoint_follower.cpp
components/test_units/include/: test_data_center.h  test_data_center_task_common.h  test_diff_drive.h  test_waypoint_follower.h
components/traction_control/: CMakeLists.txt  traction_control.c
components/transmission_unit/: CMakeLists.txt  communicationRF.c  (+3 more)
main/: CMakeLists.txt  idf_component.yml  main.c  main.cpp  seed_planter_control.c  seed_planter_control.h  seed_planter_task_common.h  test_seed_planter.c  test_seed_planter.h  test_traction_control.c  test_traction_control.h  traction_c_original.c  traction_control.c  traction_control.h  traction_task_common.h
(+32 files in other folders)
